--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: Choosr
+name: choosr
 description: Randomize picker for victims of analysis paralysis
 version: 1.0.0+1
 
@@ -13,8 +13,8 @@ dependencies:
   sembast: ^1.15.1
   path_provider: ^0.5.0+1
   # Used for BLoC state management
-  flutter_bloc: ^0.9.1
-  equatable: ^0.2.3
+  flutter_bloc: ^0.21.0
+  equatable: ^0.6.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
