Massive refactor due to rename

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -11,9 +11,9 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>choosr</string>
+	<string>dcydr</string>
 	<key>CFBundleDisplayName</key>
-	<string>Choosr</string>
+	<string>Dcydr</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
