--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Randomized picker for victims of analysis paralysis
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.2.0 <3.0.0"
+  sdk: '>=2.2.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -13,9 +13,9 @@ dependencies:
   sembast: ^1.15.1
   path_provider: ^0.5.0+1
   # bloc
-  bloc: ^0.15.0
-  flutter_bloc: ^0.21.0
-  equatable: ^0.6.0
+  bloc: ^1.0.0
+  flutter_bloc: ^1.0.0
+  equatable: ^0.6.1
   meta: ^1.1.6
   gradient_app_bar: ^0.0.1
   # logger
