--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Randomized picker for victims of analysis paralysis
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.2.0 <3.0.0'
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -30,5 +30,3 @@ flutter:
     - family: GothamPro
       fonts:
         - asset: fonts/GothamPro-Regular.otf
-  assets:
-    - img/logo-with-name.png
