--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   equatable: ^1.0.0
   meta: ^1.1.6
   gradient_app_bar: ^0.0.1
+  gradient_text: ^1.0.2
   # logger
   logger: ^0.7.0
 dev_dependencies:
